# claude-code-acp-py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  claude-code-acp.md  copilot-acp.md  copilot-sdk-proxy-design.md  gemini-acp.md  mcp-configuration.md
examples/: copilot_sdk_via_proxy.py
src/claude_code_acp/: __init__.py  __main__.py  acp_client.py  agent.py  client.py
src/claude_code_acp/proxy/: __init__.py  cli.py  protocol.py  server.py  session_manager.py
tests/: README.md  conftest.py  results_claude.txt  results_claude_mcp.txt  results_copilot.txt  results_copilot_byok_gemini.txt  results_copilot_mcp.txt  results_gemini.txt  results_gemini_mcp.txt  test_acp_client_claude.py  test_acp_client_claude_mcp.py  test_acp_client_copilot.py  test_acp_client_copilot_mcp.py  test_acp_client_gemini.py  test_acp_client_gemini_mcp.py  test_copilot_sdk_byok_anthropic.py  test_copilot_sdk_byok_gemini.py  test_copilot_sdk_claude_server.py  test_copilot_sdk_via_proxy.py  test_copilot_sdk_via_proxy_claude.py  test_copilot_sdk_via_proxy_copilot.py  test_integration_connection.py  test_integration_mcp.py  test_unit_acp_client.py  test_unit_agent.py  test_unit_client.py
