[project]
name = "claude-code-acp"
version = "0.3.1"
description = "ACP-compatible agent for Claude Code (Python version)"
authors = [
    { name = "yazelin" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["claude", "acp", "agent", "anthropic", "python", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agent-client-protocol>=0.7.0",
    "claude-agent-sdk>=0.1.29",
]

[project.scripts]
claude-code-acp = "claude_code_acp:main"

[project.urls]
Homepage = "https://github.com/yazelin/claude-code-acp-py"
Repository = "https://github.com/yazelin/claude-code-acp-py"
Issues = "https://github.com/yazelin/claude-code-acp-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_acp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
