[project]
name = "claude-code-acp"
version = "0.4.1"
description = "ACP-compatible agent for Claude Code (Python version)"
authors = [
    { name = "yazelin" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["claude", "acp", "agent", "anthropic", "python", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agent-client-protocol>=0.7.0",
    "claude-agent-sdk>=0.1.29",
]

[project.scripts]
claude-code-acp = "claude_code_acp:main"
copilot-acp-proxy = "claude_code_acp.proxy.cli:main"

[project.urls]
Homepage = "https://github.com/yazelin/claude-code-acp-py"
Repository = "https://github.com/yazelin/claude-code-acp-py"
Issues = "https://github.com/yazelin/claude-code-acp-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_acp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 120
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require Claude CLI)",
    "slow: Slow tests (MCP loading, etc.)",
]

[tool.coverage.run]
source = ["src/claude_code_acp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
